--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "eslint": "8.30.0",
         "eslint-config-next": "13.0.7",
         "fs-extra": "^11.1.0",
+        "leaflet": "^1.9.3",
         "mongodb": "^4.12.1",
         "mongoose": "^6.8.1",
         "mongoose-fuzzy-searching": "^2.0.2",
@@ -41,6 +42,8 @@
         "react": "18.2.0",
         "react-d3-tree": "^3.5.0",
         "react-dom": "18.2.0",
+        "react-leaflet": "^4.2.1",
+        "react-leaflet-cluster": "^2.1.0",
         "react-query": "^3.39.2",
         "react-visjs-timeline": "^1.6.0",
         "realm-web": "^2.0.0",
