--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
         "next-transpile-modules": "^10.0.0",
         "nextjs-progressbar": "^0.0.16",
         "react": "18.2.0",
-        "react-audio-voice-recorder": "^1.0.5",
         "react-d3-tree": "^3.5.0",
         "react-dom": "18.2.0",
         "react-leaflet": "^4.2.1",
         "react-leaflet-cluster": "^2.1.0",
+        "react-mic": "^12.4.6",
         "react-query": "^3.39.2",
         "react-visjs-timeline": "^1.6.0",
         "realm-web": "^2.0.0",
