--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react-dom": "18.2.0",
         "react-leaflet": "^4.2.1",
         "react-leaflet-cluster": "^2.1.0",
+        "react-media-recorder-2": "^1.6.23",
         "react-query": "^3.39.2",
         "react-visjs-timeline": "^1.6.0",
         "realm-web": "^2.0.0",
