--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "next-transpile-modules": "^10.0.0",
         "nextjs-progressbar": "^0.0.16",
         "react": "18.2.0",
+        "react-chrono": "^2.1.2",
         "react-d3-tree": "^3.5.0",
         "react-dom": "18.2.0",
         "react-leaflet": "^4.2.1",
