--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-query": "^3.39.2",
         "react-visjs-timeline": "^1.6.0",
         "realm-web": "^2.0.0",
+        "typescript": "^5.1.3",
         "vis-timeline": "^7.7.0",
         "zustand": "^4.2.0"
     },
