--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "@mantine/carousel": "^5.9.5",
         "@mantine/core": "^5.9.5",
         "@mantine/dates": "^5.9.5",
-        "@mantine/form": "^5.10.0",
+        "@mantine/form": "^7.2.2",
         "@mantine/hooks": "^5.9.5",
         "@mantine/modals": "^5.9.5",
         "@mantine/next": "^5.9.5",
@@ -45,6 +45,7 @@
         "react-chrono": "^2.1.2",
         "react-d3-tree": "^3.5.0",
         "react-dom": "18.2.0",
+        "react-grid-gallery": "^1.0.1-alpha.0",
         "react-leaflet": "^4.2.1",
         "react-leaflet-cluster": "^2.1.0",
         "react-media-recorder-2": "^1.6.23",
@@ -53,6 +54,7 @@
         "realm-web": "^2.0.0",
         "typescript": "^5.1.3",
         "vis-timeline": "^7.7.0",
+        "yet-another-react-lightbox": "^3.15.1",
         "zustand": "^4.2.0"
     },
     "devDependencies": {
