--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
         "react-d3-tree": "^3.5.0",
         "react-dom": "18.2.0",
         "react-grid-gallery": "^1.0.1-alpha.0",
+        "react-hot-toast": "^2.4.1",
         "react-leaflet": "^4.2.1",
         "react-leaflet-cluster": "^2.1.0",
         "react-media-recorder-2": "^1.6.23",
         "react-query": "^3.39.2",
         "react-visjs-timeline": "^1.6.0",
         "realm-web": "^2.0.0",
+        "resend": "^2.0.0",
         "typescript": "^5.1.3",
         "vis-timeline": "^7.7.0",
         "yet-another-react-lightbox": "^3.15.1",
